--- a/src/pages/Login/LoginStyles.css
+++ b/src/pages/Login/LoginStyles.css
@@ -3,7 +3,44 @@
     justify-content: space-between;
 }
 
-.login-page .logo-section {
-    height: 60%;
-    user-select: none;
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (max-width: 600px) {
+
+    .login-page .logo-section {
+        height: 60%;
+        user-select: none;
+    }
+
+}
+
+@media only screen and (min-width: 600px) {
+
+    .login-page .logo-section {
+        height: 60%;
+        user-select: none;
+    }
+    
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+    .login-page {
+        justify-content: center;
+    }
+    
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+
+    .login-page .logo-section {
+        height: 30%;
+        user-select: none;
+    }
+        
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+    
 }
