--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -13,16 +13,22 @@
     --component-padding-small: 15px;
     --body-height: calc(100vh - (2 * var(--body-padding)));
     --quick-transition: all 0.2s ease-in-out;
+    --slow-transition: all 0.4s ease-in-out;
     --border-radius-large: 10px;
     --border-radius-small: 5px;
 }
 
+#root {
+    overflow-x: hidden;
+    overflow-y: auto;
+    height: 100vh;
+}
 body {
-    background-color: var(--background-color);
-    padding: var(--body-padding);
-    color: var(--text-color);
     overflow: hidden;
-    height: var(--body-height);
+    color: var(--text-color);
+    /* height: var(--body-height); */
+    /* padding: var(--body-padding); */
+    background-color: var(--background-color);
 }
 
 /* Global styles */
@@ -73,24 +79,12 @@ h2 {
 }
 
 /* UI */
-label:hover .input-container ,
 .border-gradient {
     border: 10px solid;
     border-image-slice: 1;
     border-width: 2px;
     border-image-source: var(--main-gradient);
 }
-
-i {
-    cursor: pointer;
-    color: var(--main-color);
-    transition: var(--quick-transition);
-}
-
-i:hover {
-    color: var(--secondary-color);
-}
-
 
 /* RESPONSIVE */
 
@@ -108,6 +102,25 @@ i:hover {
     
     body {
         --body-height: calc(100vh - (2 * var(--body-padding)) - 50px);
+    }
+
+    ::-webkit-scrollbar {
+        width: 0.6em;
+    }
+    
+    ::-webkit-scrollbar-track {
+        box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+        background-color: var(--background-transparent);
+    }
+    
+    ::-webkit-scrollbar-thumb {
+        outline: none;
+        border-radius: 0.3em;
+        cursor: pointer;
+        background-color: var(--main-color-transparent);
+    }
+    ::-webkit-scrollbar-thumb:hover {
+        background-color: var(--main-color);
     }
 
 }
