Movies Loaded by genre

--- a/src/pages/Home/HomePageStyles.css
+++ b/src/pages/Home/HomePageStyles.css
@@ -101,6 +101,12 @@
     color: var(--background-color-darker);
 }
 
+
+.movies-list {
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
+
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
 
