--- a/src/pages/Home/HomePageStyles.css
+++ b/src/pages/Home/HomePageStyles.css
@@ -3,10 +3,14 @@
     overflow-y: auto;
 }
 
+section {
+    padding: 0 var(--body-padding);
+}
+
+
 /* New Releases */
 
-#newRelases {
-    margin-top: 50px;
+#newSection {
     padding: var(--body-padding);
 }
 
@@ -64,8 +68,8 @@
 
 /* Filter Bar */
 #filterBarPanel {
-    padding: var(--body-padding);
     transition: var(--quick-transition);
+    padding: var(--body-padding) var(--body-padding) 0 var(--body-padding);
 }
 
 .filter-content {
@@ -103,10 +107,37 @@
 }
 
 
-.movies-list {
+#moviesListSection {
     flex-wrap: wrap;
-    padding: var(--body-padding);
     justify-content: flex-start;
+}
+
+#headVideoSection {
+    margin: 0;
+    padding: 0;
+    height: 80vh;
+    overflow: hidden;
+    position: relative;
+    background-color: var(--background-color-darker);
+}
+
+.head-video-player {
+    width: 130vw;
+    height: 130vh;
+    margin-top: -20vh;
+    margin-left: -15vw;
+}
+
+.movie-overlay {
+    top: 0;
+    left: 0;
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    justify-content: flex-end;
+    align-items: flex-start;
+    background: linear-gradient(to bottom, var(--background-darker-transparent) 10%, transparent 50%, var(--background-darker-transparent) 80%);
 }
 
 /* Extra small devices (phones, 600px and down) */
@@ -114,15 +145,16 @@
 
     .new-releases {
         border-radius: 0;
-    }
-
-    .new-releases {
         margin-left: -30px;
         width: calc(100% + 60px);
     }
 
     .filter-content.open {
         width: calc(100% + 60px);
+    }
+
+    #moviesListSection {
+        padding: var(--body-padding) 10px;
     }
 
 }
@@ -132,20 +164,27 @@
 
     .new-releases {
         border-radius: 0;
-    }
-
-    .new-releases {
         margin-left: -30px;
         width: calc(100% + 60px);
+    }
+
+    #moviesListSection {
+        padding: var(--body-padding) 10px;
     }
 
 }
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
+
     .new-releases {
         width: 100%;
         margin-left: 0px;
         border-radius: var(--border-radius-large);
     }
+
+    #moviesListSection {
+        padding: var(--body-padding);
+    }
+
 }
