Header Video Player 4 looping videos upcoming

--- a/src/components/Cards/CardsStyles.css
+++ b/src/components/Cards/CardsStyles.css
@@ -65,7 +65,7 @@
 }
 
 .card-title {
-    font-size: 20px;
+    font-size: 1.4em;
     min-height: 25px;
     max-height: 68px;
     overflow: hidden;
