--- a/src/components/Videos/VideosStyles.css
+++ b/src/components/Videos/VideosStyles.css
@@ -27,6 +27,8 @@
 .movie-overlay-details .card-title{
     overflow: visible;
     margin: 0.3em 0;
+    line-height: 0.8em;
+    max-height: 2.5em;
 }
 
 .movie-overlay-details .card-rate,
@@ -43,5 +45,6 @@
     width: 100%;
     height: 100%;
     position: absolute;
-    background-size: cover;
+    background-size: contain;
+    background-position: center;
 }
