--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -126,6 +126,12 @@ h6 {
     box-shadow: 0px 5px 25px 5px var(--shadow-color);
 }
 
+.inner-shadow {
+    -webkit-box-shadow: 0px 5px 15px 0px var(--shadow-color-soft) inset;
+    -moz-box-shadow: 0px 5px 15px 0px var(--shadow-color-soft) inset;
+    box-shadow: 0px 5px 15px 0px var(--shadow-color-soft) inset;
+}
+
 .shadow-soft {
     -webkit-box-shadow: 0px 5px 15px 0px var(--shadow-color-soft);
     -moz-box-shadow: 0px 5px 15px 0px var(--shadow-color-soft);
