Searcher api querys + element animations

--- a/src/components/Inputs/InputStyles.css
+++ b/src/components/Inputs/InputStyles.css
@@ -22,6 +22,24 @@ input {
     transition: var(--quick-transition);
 }
 
+.input-container.search {
+    margin: 0;
+    width: 100%;
+    height: 30px;
+    border: none;
+    max-width: 800px;
+    padding: 10px 20px;
+}
+
+.input-container.search input {
+    width: 100%;
+    margin: 0 2em;
+}
+
+.input-container.search .icon-container {
+    margin-right: 20px;
+}
+
 label:hover .input-container.no-border,
 .input-container.no-border {
     border: 2px solid var(--background-color);
@@ -76,4 +94,9 @@ label:hover .input-container {
     border-image-slice: 1;
     border-width: 2px;
     border-image-source: var(--main-gradient);
+}
+
+.input-container.focused.search,
+label:hover .input-container {
+    border: none;
 }
